[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu2.gd" type="Script" id=2]
[ext_resource path="res://PancerniKal2.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Menu2" type="Node2D"]
position = Vector2( 0, 5.03969 )
script = ExtResource( 2 )

[node name="WybierzZastep2" type="Label" parent="."]
margin_left = 5.03973
margin_top = 7.55951
margin_right = 607.04
margin_bottom = 162.56
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Wybierz ZastÄ™p"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pancerni2" type="Button" parent="."]
margin_left = 188.988
margin_top = 236.865
margin_right = 404.988
margin_bottom = 327.865
custom_fonts/font = SubResource( 2 )
text = "Pancerni"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Dragoni2" type="Button" parent="."]
margin_left = 188.988
margin_top = 362.857
margin_right = 404.988
margin_bottom = 453.857
custom_fonts/font = SubResource( 2 )
text = "Dragoni"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Rajtarzy2" type="Button" parent="."]
margin_left = 189.874
margin_top = 484.995
margin_right = 405.874
margin_bottom = 575.995
custom_fonts/font = SubResource( 2 )
text = "Rajtarzy"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Lisowczycy2" type="Button" parent="."]
margin_left = 189.621
margin_top = 605.317
margin_right = 405.621
margin_bottom = 696.317
custom_fonts/font = SubResource( 2 )
text = "Lisowczycy"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Korsarze2" type="Button" parent="."]
margin_left = 190.885
margin_top = 730.907
margin_right = 406.885
margin_bottom = 821.907
custom_fonts/font = SubResource( 2 )
text = "Korsarze"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="PancerniKal2" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Pancerni2" to="." method="_on_Pancerni2_pressed"]
[connection signal="pressed" from="Dragoni2" to="." method="_on_Dragoni2_pressed"]
[connection signal="pressed" from="Rajtarzy2" to="." method="_on_Rajtarzy2_pressed"]
[connection signal="pressed" from="Lisowczycy2" to="." method="_on_Lisowczycy2_pressed"]
[connection signal="pressed" from="Korsarze2" to="." method="_on_Korsarze2_pressed"]
