extends Node2D


func _ready():
	pass


func _on_Pancerni2_pressed():
	get_tree().change_scene("res://PancerniKal2.tscn")


func _on_Dragoni2_pressed():
	pass 


func _on_Rajtarzy2_pressed():
	pass 


func _on_Lisowczycy2_pressed():
	pass 


func _on_Korsarze2_pressed():
	pass 


func _on_Arrow2_pressed():
	get_tree().change_scene("res://Wybierz.tscn")
